kubernetes/gitops/pfsense-ssl/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pfsense-svc
  namespace: pfsense-ssl
subsets:
- addresses:
  - ip: 10.11.12.254
  ports:
  - port: 8443
