kubernetes/gitops/pfsense-ssl/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pfsense-route
  namespace: pfsense-ssl
spec:
  entryPoints:
    - pfsense 
  routes:
    - match: PathPrefix(`/`) 
      kind: Rule
      services:
        - name: pfsense-svc
          port: 443
          scheme: https
          serversTransport: skip-tls-pfsense
  tls:
    secretName: aleixolab-tls
